grammar.js
    program: $ => seq(
      optional($.edition_pragma),
      repeat($.import_stmt),
      repeat($._declaration),
    ),

    // Edition pragma — opts a module into a dated language edition (Rust-style
    // editions, SPEC §17). Must be the first line of the file. Names are dates,
    // e.g. `@edition "2026.6"`. Read by the checker (lower/infer/eval), which gate
    // edition-specific semantics; absent → the project's pinned default edition.
    _declaration: $ => choice(
      $.type_def,
      $.store_def,
      $.machine_def,
      $.saga_def,
      $.stream_def,
      $.module_def,
      $.function_def,
      $.function_sig,
      $.binding,
      $.decorator_def,
      $.kernel_block,
    ),

    // First-class saga: a top-level persistent FSM with compensation.
    //   saga Checkout(cart: Cart): Result Receipt Error
    //     over CheckoutState        -- optional explicit backing store
    //     :reserve
    //       ...
    // Called like a function `Checkout(cart)` to run to completion, or spawned
    // as a live instance with `go Checkout(cart)` (yields a saga handle).
    _type: $ => choice(
      $.simple_type,
      $.type_var,
      $.lifetime_var,
      $.lifetime_of_type,
      $.unit_type,
      $.parameterized_type,
      $.record_type,
      $.tuple_type,
      $.tainted_type,
      $.effect_type,
      $.async_type,
      $.array_type,
      $.result_type,
      $.pointer_type,
      $.atomic_type,
    ),

    simple_type: $ => $.upper_id,

    function_def: $ => choice(
      // block form
      seq(
        'def',
        $.lower_id,
        optional($.param_list),
        ':',
        $._type,
        $._newline,
        $._indent,
        repeat1($._statement),
        $._dedent,
      ),
      // single-line form: def foo(x: Number): Number -> x + 1
      seq(
        'def',
        $.lower_id,
        optional($.param_list),
        ':',
        $._type,
        '->',
        $._expr,
        $._newline,
      ),
    ),

    // where clause as first line(s) of body
    param_list: $ => seq(
      '(',
      commaSep(choice($.param, $.kw_separator)),
      ')',
    ),

    _statement: $ => choice(
      $.binding,
      $.block_binding,
      $.index_assign,
      $.deref_assign,
      $.destructure,
      $.on_handler,
      $.pipe_block,
      $.try_block,
      $.retry_block,
      $.loop_expr,
      $.await_stmt,
      $.machine_expr,
      $.saga_expr,
      $.where_stmt,
      seq($._expr, $._newline),
      // Block expressions end with _dedent (no trailing _newline):
      $.if_expr,
      $.if_pattern_expr,
      $.match_expr,
      $.responsive_expr,
      $.transaction_expr,
      $.comptime_block,
      $.unsafe_block,
      $.pipe_match_stmt,
      $.pipe_lambda_stmt,
      $.element,
      $._newline,
    ),

    // Saga-specific statement set — superset of _statement.
    // Saga-only rules are ONLY valid here, keeping _indent from being
    // valid after expressions in regular function bodies.
    // saga_branch (| pattern -> ...) is valid directly here — go_stmt+
    // followed by saga_branch+ at the same level forms a parallel join.
    binding: $ => seq(
      optional(choice('const', 'let', seq('let', 'mut'), 'mut')),
      $.lower_id,
      optional(seq(':', $._type)),
      '=',
      $._expr,
      $._newline,
    ),

    block_binding: $ => seq(
      optional(choice('const', 'let', seq('let', 'mut'), 'mut')),
      $.lower_id,
      optional(seq(':', $._type)),
      '=',
      choice(
        $.lambda_block,
        $.if_expr,
        $.match_expr,
        $.responsive_expr,
        $.transaction_expr,
        $.comptime_block,
        $.unsafe_block,
        $.pipe_block,
        $.try_block,
        $.retry_block,
        $.await_stmt,
        $.machine_expr,
        $.saga_expr,
      ),
    ),

    _expr: $ => choice(
      $.literal,
      $.identifier_expr,
      $.unary_expr,
      $.binary_expr,
      $.pipe_expr,
      $.ternary_expr,
      $.if_then_expr,
      $.field_access,
      $.optional_chain,
      $.array_index,
      $.deref_expr,
      $.addr_of_expr,
      $.propagate_expr,
      $.range_expr,
      $.if_pattern_expr,
      $.type_test,
      $.record_literal,
      $.record_spread,
      $.brace_block,
      $.list_literal,
      $.for_expr,
      $.match_expr,
      $.responsive_expr,
      $.if_expr,
      $.call,
      $.lambda,
      $.send_expr,
      $.ask_expr,
      $.transaction_expr,
      $.js_block,
      $.unsafe_block,
      $.comptime_block,
      $.lazy_expr,
      $.go_expr,
      $.resume_expr,
      $.drop_expr,
      $.break_expr,
      $.continue_expr,
      $.grouped,
      $.tuple_literal,
      $.await_expr,
    ),

    identifier_expr: $ => choice(
      $.lower_id,
      $.upper_id,
    ),

    field_access: $ => prec.left('postfix', seq(
      $._expr,
      '.',
      $.member_name,
    )),

    record_literal: $ => choice(
      seq('#{', commaSep1($.record_field), '}'),
      seq('{',  commaSep1($.record_field), '}'),
    ),

    record_field: $ => seq(
      $.lower_id,
      ':',
      $._expr,
    ),

    grouped: $ => seq(
      '(',
      $._expr,
      ')',
    ),

    // Tuple literal: (a, b) or (a, b, c) — at least two elements
    // prec(1) over grouped so GLR prefers tuple when comma follows
    lambda_simple: $ => prec.right('lambda', seq(
      'fn',
      optional(choice(
        $.simple_pattern,                                // fn x -> …  /  fn (a, b) -> … (tuple)
        seq('(', $.lower_id, repeat1($.lower_id), ')'),  // fn (a b c) -> … (multi-arg; space-separated, not a tuple)
      )),
      '->',
      $._expr,
    )),

    lambda_block: $ => seq(
      'fn',
      $._newline,
      $._indent,
      repeat1($.match_branch),
      $._dedent,
    ),

    lambda: $ => choice(
      $.lambda_simple,
      $.lambda_block,
    ),

    // ----------
    // Match expressions
    // ----------

    match_branch: $ => choice(
      seq('|', $.pattern, repeat(seq('|', $.pattern)), '->', $._branch_body),
      seq('|', '->', $._branch_body),
      seq('|', '()'),
    ),

    _branch_body: $ => choice(
      seq($._expr, $._newline),
      $.step_goto,                         // | Ok r -> :done r  (saga step transition)
      $.element,                           // | Before -> Text "x" color=red
      seq($._newline, $._indent, repeat1($._saga_stmt), $._dedent),
    ),

    pattern: $ => choice(
      $.simple_pattern,
      $.guard_pattern,
    ),

    simple_pattern: $ => choice(
      $.literal,
      $.wildcard,
      seq('[', ']'),
      $.upper_id,
      seq($.upper_id, $.lower_id, $.record_pattern),  // Ok response { body, status }
      seq($.upper_id, $.simple_pattern),
      seq($.upper_id, $.record_pattern),
      $.record_pattern,
      $.qualified_pattern,
      $.binding_pattern,
      seq('(', $.pattern, ')'),  // parenthesized: Ok (Chunk c)
      $.tuple_pattern,           // (a, b), (Ok x, Error e)
    ),

    // Tuple destructuring pattern: two or more comma-separated sub-patterns.
    wildcard: $ => '_',

    binding_pattern: $ => $.lower_id,

    call: $ => prec.left('postfix', seq(
      $._expr,
      choice(
        seq(token.immediate('('), optional($._arg_list), ')'),
        // Zero-arg call `f()`: the `()` lexes as a single token (it would
        // otherwise be the `unit` literal), so match it immediately here.
        // `token.immediate` outranks the plain `unit` token, so an Upper-headed
        // `Inc()` resolves to a call rather than an incomplete element.
        token.immediate('()'),
      ),
    )),

    _arg_list: $ => seq(
      commaSep1(choice($.named_arg, $._expr)),
      optional(','),
    ),

    // `name=value` keyword argument. The `=` glyph binds a value to a parameter
    // by name (record fields keep `:`). All positional args must precede named.
    atom: $ => choice(
      $.literal,
      $.lower_id,
      $.upper_id,
      $.grouped,
      $.tuple_literal,
      $.record_literal,
      $.record_spread,
      $.list_literal,
    ),

    // ----------
    // Effects
    // ----------

    send_expr: $ => seq(
      'send',
      $.upper_id,
      $.atom,
    ),

    ask_expr: $ => seq(
      'ask',
      $.upper_id,
      $.atom,
      optional(seq('timeout=', $.number)),
    ),

    transaction_expr: $ => seq(
      'transaction',
      optional(seq('within', $.record_literal)),
      $._newline,
      $._indent,
      repeat1($._statement),
      $._dedent,
    ),

    // ----------
    // Event handlers
    // ----------

    on_handler: $ => seq(
      'on',
      $.lower_id,                 // event name (onClick, onInput, …)
      optional($.lower_id),       // optional event param: `on onInput e -> …(e.value)`
      choice(
        seq('->', $._expr, $._newline),
        seq('->', $._newline, $._indent, repeat1($._statement), $._dedent),
      ),
    ),

    // ----------
    // Escape blocks
    // ----------

    js_block: $ => seq(
      '@js{',
      token.immediate(/[^}]*/),
      '}',
    ),

    unsafe_block: $ => seq(
      '@unsafe{',
      $._newline,
      $._indent,
      repeat1($._statement),
      $._dedent,
    ),

    comptime_block: $ => seq(
      '@comptime{',
      $._newline,
      $._indent,
      repeat1($._statement),
      $._dedent,
    ),

    // Optional explicit `{ ... }` block — items separated by `;`. Works single-
    // or multi-line (`;` at line ends). Disambiguated from record_literal by the
    // separator AND content: `,` + `name:` ⇒ record; `;` / `name =` / `<stmt>` /
    // `{}` ⇒ block. `;`-required (not bare newline) keeps it unambiguous from a
    // multi-line record, which makes NEWLINE invalid inside `{}` (the scanner
    // only emits NEWLINE when the grammar marks it valid). No inline `: type` on
    // brace-bindings keeps the `=` vs `:` record fork one token wide.
    element: $ => seq(
      $.upper_id,
      optional($.element_content),
      choice(
        seq(repeat1($.prop), $._newline, optional($.children_block)),
        seq($._newline, $.children_block),
      ),
    ),

    // A content-only / bare element, valid only as a child (no adt_call ambiguity
    // there): `Text "hello"`, `Spacer`.
    prop: $ => choice(
      seq($.lower_id, '=', $.atom),
      seq($.lower_id, '={', $._expr, '}'),
      seq($.lower_id, '->', $._expr),
      seq(
        $.lower_id,
        '->',
        $._newline,
        $._indent,
        repeat1($._statement),
        $._dedent,
      ),
      $.lower_id,
      seq('...', $._expr),
    ),

    // The leading _newline is consumed by `element` before this block, so it only
    // holds the indent / children / dedent.
    children_block: $ => seq(
      $._indent,
      repeat1($.child),
      $._dedent,
    ),

    // Every child is self-terminating (element eats its own newline; on_handler
    // ends in a newline or dedent; `{expr}` takes a trailing newline) so siblings
    // at the same indent stay siblings instead of mis-nesting.
    child: $ => choice(
      $.element,
      $.element_leaf,
      $.for_child,
      $.on_handler,
      seq('{', $._expr, '}', $._newline),
    ),

    // Keyed list rendering: `for r in rows` over an indented per-item element.
    // Distinct from the `for ( … ) ->` comprehension (which requires parens). Each
    // produced child is auto-keyed on `r.id` (the implicit, SQL-primary-key default)
    // unless the element sets its own `id`/`key`. Lowering supplies the key.
    literal: $ => choice(
      $.number,
      $.bool,
      $.triple_quote_string,
      $.multiline_string,
      $.string,
      $.hex_color,
      $.unit,
      $.atom_lit,
      $.duration_lit,
      $.sigil_string,
      $.regex_sigil,
    ),

    // Atom: colon glued directly to a lowercase identifier (`:done`). Single
    // token so `:name` never collides with a record/ascription `:` (which is
    // always followed by space or an uppercase type). This is what makes the
    // `{ name: … }` = record vs `{ … }` = block content-disambiguation sound.
    number: $ => token(choice(
      /0b[01][01_]*/,
      /0x[0-9a-fA-F][0-9a-fA-F_]*/,
      /[0-9][0-9_]*\.[0-9][0-9_]*/,
      /[0-9][0-9_]*/,
    )),

    string: $ => seq(
      '"',
      repeat(choice(
        // `_string_content` is an EXTERNAL token (scanner.c): it greedily
        // consumes raw text up to `"`, `{`, `\` or newline. tree-sitter tries
        // external tokens before `extras`, so a `--` inside a string is NOT
        // eaten as a comment (the internal lexer's longest-match would let
        // `--.*` swallow the closing quote — see the `_string_content` case).
        $._string_content,
        seq(token.immediate('{'), $._expr, '}'),
        seq(token.immediate('\\'), token.immediate(/./)),
      )),
      '"',
    ),

    lower_id: $ => /[a-z][a-zA-Z0-9_]*/,
    upper_id: $ => /[A-Z][a-zA-Z0-9_]*/,

  }
})

function commaSep(rule) {
  return optional(commaSep1(rule))
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)))
}
