test/corpus/escape_blocks.txt
================================================================================
js block
================================================================================

def foo(): Number
  @js{ Math.random() }

--------------------------------------------------------------------------------

(program
  (function_def
    (lower_id)
    (param_list)
    (simple_type
      (upper_id))
    (js_block)))

================================================================================
unsafe block
================================================================================

def foo(): Number
  @unsafe{
    x = 42
    x

--------------------------------------------------------------------------------

(program
  (function_def
    (lower_id)
    (param_list)
    (simple_type
      (upper_id))
    (unsafe_block
      (binding
        (lower_id)
        (literal
          (number)))
      (identifier_expr
        (lower_id)))))

================================================================================
comptime block
================================================================================

def foo(): Number
  @comptime{
    x = 42
    x

--------------------------------------------------------------------------------

(program
  (function_def
    (lower_id)
    (param_list)
    (simple_type
      (upper_id))
    (comptime_block
      (binding
        (lower_id)
        (literal
          (number)))
      (identifier_expr
        (lower_id)))))
